# dda-bench

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  README.md  compare_digits.py  dda_codes.json  pyproject.toml  requirements.txt  todolist.md  tox.ini
dda_bench/: cli.py  commands.py  comparators.py  comparison.py  config.py  executors.py  extractors.py  io_results.py  reporters.py  utils.py
dda_bench/examples/: DDA_commands
docs/: configuration.md
example/: DDA_commands
scripts/: .ipynb  shape_format.py
tests/: DDA_commands  DDA_commands_fullprecision  DDA_commands_internalfield  DDA_commands_solverprecision
